Implemented AutoMapper and started JWT setup

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,8 @@
   "DefaultConnection": "Server=localhost,1433;Database=CollegeDb;User Id=sa;Password=Manju@123;TrustServerCertificate=True;"
 }
 ,
+"JWTSecret":"This is secretkeey 12324r*&^&E234"
+,
 
   "AllowedHosts": "*"
 }
